# Angel

./: .gitignore  .travis.yml  Gemfile  Guardfile  LICENSE  Makefile  README  README.md  Rakefile  Setup.hs  TODO  angel.cabal  angeld  changelog.md  example.conf
Angel/: Config.hs  Data.hs  Files.hs  Job.hs  Log.hs  Main.hs  Parse.hs  Util.hs
src/Angel/: Config.hs  Data.hs  Files.hs  Job.hs  Log.hs  Main.hs  PidFile.hs  Prelude.hs  Process.hs  Util.hs
test/: Spec.hs  SpecHelper.hs
test/Angel/: ConfigSpec.hs  JobSpec.hs  LogSpec.hs  PidFileSpec.hs  UtilSpec.hs
test/test_jobs/: CompliantJob.hs  StubbornJob.hs
