Name:                angel
Version:             0.6.2
License:             BSD3
License-file:        LICENSE
Author:              Jamie Turner
Synopsis: Process management and supervision daemon
Description:    @angel@ is a daemon that runs and monitors other processes.  It
                is similar to djb's `daemontools` or the Ruby project `god`.
                .
                It's goals are to keep a set of services running, and to facilitate
                the easy configuration and restart of those services.

                See the homepage for documentation.

Maintainer:          Michael Xavier <michael@michaelxavier.net>
Homepage:            http://github.com/MichaelXavier/Angel
Bug-Reports:         http://github.com/MichaelXavier/Angel/issues

Stability:           Stable
Category:            System
Build-type:          Custom

Extra-source-files:  README.md
                     changelog.md
                     test/test_jobs/CompliantJob.hs
                     test/test_jobs/StubbornJob.hs

Cabal-version:       >=1.8


source-repository head
    type: git
    location: https://github.com/MichaelXavier/Angel.git

Executable angel
  Hs-Source-Dirs: src
  Main-is: Angel/Main.hs

  Build-depends: base >= 4.5 && < 5
  Build-depends: process >= 1.2.0.0 && < 2.0
  Build-depends: mtl
  Build-depends: configurator >= 0.1
  Build-depends: stm >= 2.0
  Build-depends: containers >= 0.3
  Build-depends: unordered-containers >= 0.1.4
  Build-depends: unix >= 2.4
  Build-depends: time >= 1.5
  Build-depends: old-locale
  Build-depends: text>=0.11
  Build-depends: transformers
  Build-depends: optparse-applicative


  Other-modules: Angel.Files,
                 Angel.Config,
                 Angel.Data,
                 Angel.Job,
                 Angel.Process
                 Angel.Log,
                 Angel.Util,
                 Angel.PidFile

  Extensions: OverloadedStrings,ScopedTypeVariables,BangPatterns,ViewPatterns

  Ghc-Options: -threaded -fwarn-missing-import-lists

test-suite spec
  Type:           exitcode-stdio-1.0
  Main-Is:        Spec.hs
  Hs-Source-Dirs: src, test
  Other-modules: Angel.ConfigSpec
                 Angel.JobSpec
                 Angel.LogSpec
                 Angel.PidFileSpec
                 Angel.UtilSpec
                 SpecHelper
  Build-Depends: base
  Build-Depends: tasty
  Build-Depends: tasty-hunit
  Build-Depends: tasty-quickcheck
  Build-depends: base >= 4.0 && < 5
  Build-depends: process >= 1.0 && < 2.0
  Build-depends: mtl
  Build-depends: configurator >= 0.1
  Build-depends: stm >= 2.0
  Build-depends: containers >= 0.3
  Build-depends: unordered-containers >= 0.1.4
  Build-depends: unix >= 2.4
  Build-depends: time
  Build-depends: old-locale
  Build-depends: text>=0.11
  Build-depends: transformers
  Extensions: OverloadedStrings,ScopedTypeVariables,BangPatterns,ViewPatterns
  Ghc-Options: -threaded -rtsopts -with-rtsopts=-N
